--- a/MyoLIFXControl/MyoLIFXControl/MyoLIFXControl-Info.plist
+++ b/MyoLIFXControl/MyoLIFXControl/MyoLIFXControl-Info.plist
@@ -24,6 +24,11 @@
 	<string>1.0.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>external-accessory</string>
+	</array>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
